tests/NormalTests/paczka1/fuzzy1/30015748.err
Error in line 1: QGYQO2zCUk S329 88,1
Error in line 13: HNnmb S772 73,0
Error in line 14: HNnmb S221 95,1
Error in line 16: HNnmb S772 92,7
Error in line 30: S221 S772 83,2
Error in line 37: QGYQO2zCUk S329 48,9
